Consertei os títulos da primeira página e o link do footer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <main>
         <article>
             <section>
-                <h1 id="prefacio"><a href="#prefacio">1. Prefácio</a></h1>
+                <h1 id="prefacio" class="titulo"><a href="#prefacio">1. Prefácio</a></h1>
 
                 <p>Este livro foi desenvolvido de forma autônoma, sem pretensões acadêmicas ou financeiras. As principais motivações foram o aperfeiçoamento, por parte do autor, em tecnologias de front-end e back-end e por possuir múltiplas anotações e pseudo-artigos referentes a disciplinas ministradas no curso de <em>BC&T</em> na Universidade Federal do ABC. Além disso, como sempre me interessei por programação &mdash; mais especificamente por simulações de física e movimento &mdash;, concluí que realizar este pequeno projeto seria um bom reforço para todo esse escopo de conhecimento.</p>
 
@@ -80,7 +80,7 @@
             </section>
 
             <section>
-                <h2 id="introducao"><a href="#introducao">1.1. Introdução</a></h2>
+                <h2 id="introducao" class="titulo"><a href="#introducao">1.1. Introdução</a></h2>
 
                 <p>Este texto tem como objetivo o estudo geométrico básico de vetores em \( \mathbb{R}^2 \) e \( \mathbb{R}^3 \) &mdash; ou seja, em duas e três dimensões &mdash; para a construção de uma boa intuição a fim de implementá-los em código utilizando Python com algumas bibliotecas nativas.</p>
 
@@ -90,7 +90,7 @@
             </section>
 
             <section>
-                <h2 id="pub-alvo"><a href="#pub-alvo">1.2. Público-alvo</a></h2>
+                <h2 id="pub-alvo" class="titulo"><a href="#pub-alvo">1.2. Público-alvo</a></h2>
 
                 <p>Este projeto não foi desenvolvido pensando em um público-alvo específico, ainda assim, creio que, assim como julgo ser importante para o aprimoramento de uma gama de habilidades que quero desenvolver, vejo que existem diversas características pessoais e acadêmicas que fazem com que essa leitura seja uma boa recomendação.</p>
 
@@ -101,7 +101,7 @@
 
 
             <section>
-                <h2 id="contex"><a href="#contex">1.3. Contextualização</a></h2>
+                <h2 id="contex" class="titulo"><a href="#contex">1.3. Contextualização</a></h2>
 
                 <p>O estudo de vetores costuma ser um dos primeiros contatos do estudante com conceitos mais abstratos da matemática e da física. Em muitos materiais, esse conteúdo é apresentado de forma completamente formal, com definições e propriedades algébricas introduzidas logo de início, o que pode dificultar a construção de uma compreensão intuitiva do que um vetor pode representar.</p>
 
@@ -111,7 +111,7 @@
             </section>
 
             <section>
-                <h2 id="add"><a href="#add">1.4. Conteúdo Adicional</a></h2>
+                <h2 id="add" class="titulo"><a href="#add">1.4. Conteúdo Adicional</a></h2>
 
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus tempora, quisquam commodi sunt exercitationem harum unde dolores voluptatum, in aperiam, rem similique at hic? Doloribus quae itaque eum accusamus iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi expedita pariatur ad velit aliquam sit amet natus ut unde architecto consequatur quis sed fugiat nihil laboriosam porro, numquam, eos reprehenderit!</p>
 
