fiz algumas alterações para mediaquerry

--- a/paginas/definicao.html
+++ b/paginas/definicao.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Definição</title>
     <link rel="stylesheet" href="../assets/estilos/style.css">
+    <link rel="stylesheet" href="../assets/estilos/tela_grande.css" media="screen and (min-width: 700px)">
     <script src="../js/config.js" defer></script>
     <script src="../js/animacao.js"></script>
     <script src="https://kit.fontawesome.com/5d8c3e1f97.js" crossorigin="anonymous"></script>
