Ajeitei as pastas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vetores</title>
     <link rel="stylesheet" href="assets/estilos/style.css">
-    <script src="js/config.js" defer></script>
+    <script src="scripts/config.js" defer></script>
+    <script src="scripts/animacao.js"></script>
     <script src="https://kit.fontawesome.com/5d8c3e1f97.js" crossorigin="anonymous"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
 </head>
