--- a/paginas/definicao.html
+++ b/paginas/definicao.html
@@ -6,8 +6,8 @@
     <title>Definição</title>
     <link rel="stylesheet" href="../assets/estilos/style.css">
     <link rel="stylesheet" href="../assets/estilos/tela_grande.css" media="screen and (min-width: 700px)">
-    <script src="../js/config.js" defer></script>
-    <script src="../js/animacao.js"></script>
+    <script src="../scripts/config.js" defer></script>
+    <script src="../scripts/animacao.js"></script>
     <script src="https://kit.fontawesome.com/5d8c3e1f97.js" crossorigin="anonymous"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
 </head>
